# Data_Structures_C_C-

./: README.txt
.github/workflows/: cmake-multi-platform.yml
HW1/: Build_Run_Test.bat  CMakeLists.txt  main.c
HW1/Test/: test_output.py
